--- a/estilo.css
+++ b/estilo.css
@@ -48,16 +48,19 @@ header{
 }
 
 nav{
-    width: 63%;
-    height: 90px;
+    width: 60%;
+    height: 60px;
     text-align: right;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: large;
-    margin-left: 30%;
-    margin-top: 45px;
+    margin-left: 430px ;
+    margin-top: 40px;
+    padding: 10px;
 }
 a{
-    font-size: medium;
+    font-size: 15px;
     text-decoration: none;
     color: white;   
+    padding: 1px;
+    margin: 0px;
+
 }
