--- a/estilo.css
+++ b/estilo.css
@@ -1,8 +1,14 @@
+body{
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+}
+
 header{
+    margin-top: 10px;
     width: 99%;
     height: 210px;
     padding: 0px;
-    margin: auto;
     border: 0px;
     background-color: rgb(21, 49, 94);
 }
@@ -12,16 +18,17 @@ header{
     height: 80px;
     margin: 10PX;
     margin-top: 0px;
-    margin-left: 85px;
+    margin-left: 60px;
     padding: 1PX;
     display: flex;
+
 }
 
 #menu{
     width: 40px;
     height: 30px;
     margin-top: 45px;
-    margin-left: 25px;
+    margin-left:0px;
     
 }
 
@@ -59,7 +66,7 @@ nav{
 a{
     font-size: 15px;
     text-decoration: none;
-    color: white;   
+    color: white;
     padding: 1px;
     margin: 0px;
 
@@ -67,20 +74,19 @@ a{
 
 #banner{
     width: 99%;
-    margin: auto;
-    height: 350px;
+    
+    height: 335px;
     display: flex;
     
     /*border: solid black 1px;*/
 }
 
 .Banner{
-    width: 446px;
-    height: 350px;
+    width: 435px;
+    height: 335px;
     padding: 0px;
     margin: auto;
     margin: 0px;
-    
     
 }
 
@@ -107,13 +113,18 @@ a{
 
 #texto_conta2{
     font-weight: none;
-    font-size: 30px;
+    font-size: 26px;
     margin-top: 10px;
 
 }
 
-#img_banner, #logo_banner{
-    width: 446px;
-    height: 350px;
+#img_banner{
+    width: 410px;
+    height: 335px;
+}
+
+#logo_banner{
+    width: 400px;
+    height: 335px;
 }
 
