--- a/estilo.css
+++ b/estilo.css
@@ -128,19 +128,38 @@ a{
 
 #agenciaVirtual{
     width: 99%;
-    height: 490px;
+    height: 450px;
     margin-top: 0px;
     margin: 10px;
     background-color: rgb(209, 215, 255);
     display: flex;
-    border: solid 1px black;
+    flex-wrap: wrap;
+    
 }
 
+#bloco{ /*Criação de uma div que vai conter os blocos*/
+    display: flex; /*Abertura do flex*/
+    flex-direction: row;/*Aqui definimos que não estamos usando coluna*/
+    width: 99%;
+    height: 380px;
+    margin: 0px;
+    border: 0px;
+    padding: 0px;
+    flex-wrap: wrap;/*Aqui define que não se pode passar das dimensões da div portanto o quadrado desce*/
+    justify-content: center;/*Alinha os itens de acordo com o eixo principal do container */
+    align-items: center; 
+    gap: 5px;/*Define um espaçamento entre os itens dentro do container*/
+   
+}
 #titulo{
     width: 290px;
-    padding: 20px;
+    height: 40px;
+    padding: 0px;
+    margin: 0px;
+    border: 0px;
     margin-left: 15px;
-    margin-right: 900px;
+    margin-top: 30px;
+    
 }
 
 #title{
@@ -148,9 +167,9 @@ a{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 30px;
     font-weight: lighter;
-    padding-top: 10px;
+    padding-top: 0px;
     margin-left: 25px;
-    margin: 10px;
+    margin: 0px;
     
 }
 
@@ -160,6 +179,8 @@ a{
     height: 150px;
     border-radius: 15px;
     background-color: rgb(6, 91, 250);
+    margin: 5px;
+    
 
 }
 
