--- a/estilo.css
+++ b/estilo.css
@@ -373,17 +373,27 @@ hr{
 }
 
 .copasa_bloco, .imgblocos{
-    width: 340px;
+    width: 335px;
     height: 460px;
-    
+    margin: 5px;
     border-radius: 25px;
+    display: flex;
     border: solid 1px black;
 }
 
 .copasa_bloco{
     margin-left: 40px;
 }
+
 .imgblocos{
-    width: 340px;
+    width: 335px;
     height: 460px;
+}
+
+.copasaTitles{
+    width: 250px;
+    height: 100px;
+    font-size: 1.8em;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    border: solid 1px black;
 }
